# python-simple-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  config.py  docker-compose-test.yml  docker-compose.yml  logger.json  logger.py  pyproject.toml  requirements.txt  settings.py
migrations/: env.py
migrations/versions/: a7b38ae91ebd_init.py  abbb887172bf_add_email_verified.py
src/: cache.py  console.py  database.py  error.py  logger.py  main.py
src/api/: auth.py  dependencies.py  users.py
src/auth/: router.py  schemas.py  service.py  utils.py
src/email/: tasks.py
src/repositories/: abstract.py  users.py
src/schemas/: auth.py  users.py
src/services/: email.py  users.py
src/users/: models.py  router.py  schemas.py  service.py  utils.py
src/utils/: hasher.py  jwt.py
tests/: conftest.py  settings.py  test_users.py
tests/auth/: test_utils.py
tests/users/: test_users.py
